update swagger & add cors
