# docs/swagger.json
@@ -7,8 +7,7 @@
         "description": "container service dogker",
         "title": "go-container-service-lintang",
         "contact": {
-            "name": "lintang",
-            "url": "uyayiu123@gmail.com"
+            "name": "lintang"
         },
         "license": {
             "name": "Apache 2.0",
@@ -23,7 +22,7 @@
             "get": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Mendapatkan semua swarm service milik user",
@@ -58,7 +57,7 @@
             "post": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "User Membuat swarm service lewat endpoint ini",
@@ -105,16 +104,67 @@
                 }
             }
         },
+        "/containers/create/schedule": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "menjadwalkan pembuatan container",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "containers"
+                ],
+                "summary": "menjadwalkan pembuatan container",
+                "parameters": [
+                    {
+                        "description": "request body penjadwalan pembuatan container",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.scheduleCreateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/router.deleteRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/router.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/containers/upload": {
             "post": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "User Membuat swarm service tetapi source code (tarfile) nya dia upload  lewat endpoint ini",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -178,7 +228,7 @@
             "get": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Mendapatkan swarm service user berdasarkan id",
@@ -222,7 +272,7 @@
             "put": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "update swarm service user (bisa juga vertical scaling disini)",
@@ -278,7 +328,7 @@
             "delete": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "delete user swarm service",
@@ -324,7 +374,7 @@
             "put": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "horizontal scaling container user",
@@ -375,11 +425,69 @@
                 }
             }
         },
+        "/containers/{id}/schedule": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "menjadwalkan start/stop/terminate container",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "containers"
+                ],
+                "summary": "menjadwalkan start/stop/terminate container",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "container id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request body penjadwalan start/stop/terminate container",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/router.scheduleContainerReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/router.deleteRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/router.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/containers/{id}/start": {
             "post": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "run container user",
@@ -425,7 +533,7 @@
             "post": {
                 "security": [
                     {
-                        "Authorization": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "stop container user",
@@ -443,108 +551,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/router.deleteRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/router.ResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/router.ResponseError"
-                        }
-                    }
-                }
-            }
-        },
-        "/create/schedule": {
-            "post": {
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ],
-                "description": "menjadwalkan pembuatan container",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "containers"
-                ],
-                "summary": "menjadwalkan pembuatan container",
-                "parameters": [
-                    {
-                        "description": "request body penjadwalan pembuatan container",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/router.scheduleCreateReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/router.deleteRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/router.ResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/router.ResponseError"
-                        }
-                    }
-                }
-            }
-        },
-        "/{id}/schedule": {
-            "post": {
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ],
-                "description": "menjadwalkan start/stop/terminate container",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "containers"
-                ],
-                "summary": "menjadwalkan start/stop/terminate container",
-                "parameters": [
-                    {
-                        "description": "request body penjadwalan start/stop/terminate container",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/router.scheduleContainerReq"
-                        }
                     }
                 ],
                 "responses": {
